# music_evolution

./: Cargo.toml  README.md  habitat_config.json
src/: database.rs  decode_genome.rs  genome.rs  genome_crosser.rs  genome_player.rs  graph.rs  initialise_experiment.rs  lib.rs  main.rs  play_genes.rs  reproduction.rs  user_interaction.rs  web_interface.rs
