[package]
name = "music_evo"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.15"
rand = "0.8"
hound = "3.4.0"
postgres = "0.19"
dotenv = "0.15"
serde_json = "1.0.136"
bytes = "1.6.0"
serde = { version = "1.0.210", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
maud = "0.26.0"
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"

[[bin]]
name = "web_server"
path = "src/bin/main_web.rs"

[[bin]]
name = "init_experiment"
path = "src/bin/init_experiment.rs"

[[bin]]
name = "scrub_db"
path = "src/bin/scrub_db.rs"


